[B]Advanced Emulator Launcher | version 0.9.9 | XX February 2018[/B]

WIP      Complete Extranafart support for Categories/Launchers.

WIP      Complete Extranafart support for ROMs.

WIP      Advanced fuzzy search engine based on the Levenshtein Distance algorithm, for both
         online and offline scrapers. There is a Python implementation of the algorithm here,
         https://github.com/seatgeek/fuzzywuzzy

WIP      Massive upgrade of AEL Offline scraper database.

WIP      Update MAME Offline Scraper database to version 0.188 or 0.189

WIP      Support Kodi VFS and ROMs in remote filesystems for Retroplayer.
         See Chrisism patch in Github.
         Copy remote ROMs for external launchers?

WIP      Edit multi-disc ROMs.

WIP      Fix artwork support for mult-disc ROMs.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2628912#pid2628912

WIP      Changes and suggestions propoed by Atsumori.

         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2560843#pid2560843
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2586596#pid2586596

WIP      LaunchBox Games Database scraper.
         Apparently LaunchBox GamesDB started as a copy of TheGamesDB. Currently there is no
         API to access LaunchBox GamesDB but an XML with all the database info can be downloaded.

         See http://gamesdb.launchbox-app.com/
         See https://bitbucket.org/jasondavidcarr/launchbox/issues/902/api-access-to-launchbox

WIP      Have a look at https://www.screenscraper.fr/ and consider it for an online scraper.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2622839#pid2622839

WIP      Think about exporting the AEL platform database using JSON-LD in accordance to
         Garbear's idea.
         See https://forum.kodi.tv/showthread.php?tid=295463&pid=2625754#pid2625754

WIP      Add support for ScummVM platform in the Offline Scraper.